--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=API; Trusted_Connection=true; TrustServerCertificate=true"
+    "DefaultConnection": "Server=localhost; Database=API; Trusted_Connection=true; TrustServerCertificate=true",
+    //"DefaultConnection": "Data Source=DatabaseName;Initial Catalog=API;MultipleActiveResultSets=True;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
